<resources>
    <string name="app_name">Food Planner</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="grocery_item_hint">Grocery Item</string>
    <string name="cost_hint">Cost</string>
    <string name="item_text">Item</string>
    <string name="cost_text">Cost</string>
    <string name="menu_cancel_text">Cancel</string>
    <string name="view_grocery_item_label">View Grocery Item</string>
    <string name="aisle_text">Aisle</string>
    <string name="add_checkbox_text">Add</string>
    <string name="aisle_hint">Aisle</string>
    <string name="make_list_text">Create Shopping List</string>
    <string name="create_meal_text">Weekly Meal Plan</string>
    <string name="view_lists_text">View Shopping Lists</string>
    <string name="make_list">Make List</string>
    <string name="menu_option_text">Menu Option</string>
    <string name="meal_item_hint">Meal item</string>
    <string name="make_menu_text">Clear Meal Planner</string>
    <string name="finish_shopping">Finish Shopping</string>
    <string name="in_cart">In Cart</string>
    <string name="action_home">Home</string>
    <string name="action_make_list">Make List</string>
    <string name="action_view_list">View List</string>
    <string name="action_make_meal">Make Meal</string>
    <string name="food_planner_text">Food Planner</string>
    <string name="day_of_week_text">Day of week</string>
    <string name="meal_type_text">Meal Type</string>
    <string name="meal_day_hint">Day of week</string>
    <string name="meal_type_hint">Breakfast/Lunch/Dinner</string>
</resources>