<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.cvtc.wkugel1.groceryshoppingapp.activity.MainActivity">

    <item
        android:id="@+id/action_home"
        android:orderInCategory="10"
        android:title="@string/action_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_make_list"
        android:orderInCategory="20"
        android:title="@string/action_make_list"
        android:icon="@drawable/ic_make_list"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_make_meal"
        android:orderInCategory="20"
        android:title="@string/action_make_meal"
        android:icon="@drawable/ic_make_meal"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_view_list"
        android:orderInCategory="30"
        android:title="@string/action_view_list"
        android:icon="@drawable/ic_view_list"
        app:showAsAction="ifRoom" />
</menu>