<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/grocery_item_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/item_text"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toStartOf="@+id/add_item_checkbox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cost_text"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="@id/grocery_item_title"
                app:layout_constraintStart_toStartOf="@id/grocery_item_title"
                app:layout_constraintTop_toBottomOf="@id/grocery_item_title" />

            <TextView
                android:id="@+id/item_aisle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/aisle_text"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="@id/item_cost"
                app:layout_constraintStart_toStartOf="@id/item_cost"
                app:layout_constraintTop_toBottomOf="@id/item_cost" />

            <CheckBox
                android:id="@+id/add_item_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_checkbox_text"
                android:onClick="onCheckBoxClicked"
                app:layout_constraintBottom_toBottomOf="@+id/item_aisle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/grocery_item_title"
                app:layout_constraintVertical_bias="0.428" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>